--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
+  <title>Chat App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="/test.png">
+  <meta name="theme-color" content="#f3f9a7">
 </head>
 
 <body>
